[project]
name = "reportus"
version = "0.1.0"
dependencies = [
  "streamlit==1.57.0",
]

[project.optional-dependencies]
dev = [
  "pyright==1.1.409",
  "ruff==0.15.12",
  "watchdog==6.0.0",
]
test = [
  "pytest==9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pyright]
reportUnknownLambdaType = false
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.ruff]
lint.ignore = ["E501", "E741"]
